styles/style.css
* {
    margin: 0;
    padding: 0;
}

.header {
    background-image: url(../images/donation3.jpg);
    /* height: 100vh; */
    background-repeat: no-repeat;
    /* width: 100%; */
    /* background-attachment: fixed; */
    /* background: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%); */
    /* background-blend-mode: multiply; */
    background-size: 100%;
    height: 100vh;
}

.header-div {
    text-align: center;
    padding: 175px 307px;
}

.header-title {
    color: #FFFFFF;
    font-weight: 700;
    font-size: 65px;
    margin-bottom: 20px;
}

.header-description {
    color: #FFFFFF;
    font-size: 18px;
    margin-bottom: 30px;
}

.header-btn {
    background: #FF5959;
    border-radius: 5px;
    padding: 16px 13px;
    border: none;
    color: white;
    font-size: 20px;
    /* font-weight: 600; */
}

/* main */
.donate-today {
    text-align: center;
    width: 100%;
}

.money-container {
    display: flex;
    justify-content: center;
    gap: 22px;
    margin-top: 50px;
}

.tk-btn {
    background: #FAFAFA;
    border-radius: 5px;
    border: none;
    padding: 43px 22px;
    font-weight: 700;
    font-size: 30px;
    color: #707070;
    border: 2px solid #FAFAFA;
    /* cursor: pointer; */
}
.tk-btn:hover {
    background: #FFEEEE;
    border: 2px solid #FF5959;
    border-radius: 5px;
    color: #FF5959;
}

.main-title {
    margin-top: 130px;
    font-weight: 700;
    font-size: 45px;
    color: #121212;
}

.main-description {
    font-size: 18px;
    color: #707070;
    margin: 20px 374px 0;
}

.other-amount input {
    margin-top: 30px;
    font-size: 18px;
    color: #B3B3B3;
    margin-bottom: 10px;
    border: none;
}

.hr-line {
    margin: 0px 337px 30px;
    border: 1px solid #DADADA;
}

.plan-container {
    display: flex;
    padding: auto 23px;
    margin: 50px 157px 0;
    gap: 24px;
}

.food {
    text-align: left;
    background: rgba(79, 157, 166, 0.1);
    border-radius: 5px;
    padding: 64px 23px 54px;
}

.shelter {
    text-align: left;
    background: rgba(255, 89, 89, 0.1);
    border-radius: 5px;
    padding: 64px 23px 54px;
}

.education {
    text-align: left;
    background: rgba(231, 215, 99, 0.1);
    border-radius: 5px;
    padding: 64px 23px 54px;
}

/* .donate-icon {} */

.donate-title {
    margin: 32px auto 16px;
    font-weight: 600;
    font-size: 24px;
    color: #121212;
}

.donate-description {
    font-size: 16px;
    color: #707070;
}

/* Contribute */
.contribute-container{
    display: flex;
    margin: 130px 170px 0px;
    gap: 70px;
    align-items: center;
}
.contribute-container h1{
    font-weight: 700;
    font-size: 45px;
    color: #121212;
}
.contribute-container p{
    font-size: 18px;
    color: #707070;
    margin: 30px auto 30px;
}

.subscribe{
    margin: 50px 315px 130px;
    background: #FFF4D6;
}
.subscribe-container{
    display: flex;
    padding: 76px 188px;
}
.subscribe-container input{
    padding-left: 18px;
    padding-right: 200px;
    border: none;
    background: #D9D9D9;
    border-radius: 5px 0px 0px 5px;
    font-size: 16px;
    color: #AA9F9F;
}
.footer{
    background: #0B0D17;
    text-align: center;
}
.footer h1{
    color: #FF5959;
    font-size: 36px;
    letter-spacing: 0.5px;
}
.footer p{
    color: #D9DBE1;
    font-size: 14px;
}
.footer-content{
    padding: 43px 0px;
}

